--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
 <div class="container">
     <h1>Welcome to the Hospital Management System</h1>
-    <button onclick="window.location.href='Doctorlogin.html'">Doctor Login</button>
-    <button onclick="window.location.href='Patientlogin.html'">Patient Login</button>
+    <button onclick="window.location.href='doctorlogin.html'">Doctor Login</button>
+    <button onclick="window.location.href='patientlogin.html'">Patient Login</button>
     <button onclick="window.location.href='AppointmentReservation.html'">Appointment Reservation</button>
     <button onclick="window.location.href='DoctorProfile.html'">Doctor Profile</button>
     <button onclick="window.location.href='PatientHistory.html'">Patient History</button>
